# uptools3

./: Makefile  Makefile.header  Makefile.template  README  UpworksDefaults  announcement  configure  uptools_tutorial
Tools/: Makefile
Tools/OLDUpread2/: Makefile  Unipen_identifications  allo_resample.c  allo_resample.h  bitmap_routines.c  image_routines.c  image_routines.h  output_featchar.c  output_image.c  output_unipen.c  unipen_identifications.c  unipen_identifications.h  upread2.c  upread2.h
Tools/Uni2animgif/: examine_gif  examine_gif.c  examine_gif.h  gifmerge_patch.c  gifmerge_patch.h  pen-and-mobile.unp-dat  scale.c  scale.h  uni2animgif.c  unipen.unp-dat
Tools/Unipen2eps/: unipen2eps.c
Tools/Upread/: upread.c
Tools/Upread2/: Makefile  Unipen_identifications  allo_resample.c  bitmap_routines.c  image_routines.c  image_routines.h  output_featchar.c  output_image.c  output_unipen.c  saved_output_image  unipen_identifications.c  unipen_identifications.h  upread2.c  upread2.h
Tools/Upview/: oldupview.c  upview.c  upview.h
Tools/Upworks/generic/: ink_hwr.c  ink_hwr.h  ink_master.c  ink_master.h  ink_siglib.c  ink_siglib.h  ink_vabs.c  ink_vabs.h  ink_widget.c  ink_widget.h  jump_through_segments.c  jump_through_segments.h  read_unipen.c  siglib.h
Tools/Upworks/mac/: pkgIndex.tcl
Tools/Upworks/unix/: Makefile  Makefile.in  config.cache  config.status  configure  configure.in  maintest.c  pkgIndex.tcl  pkgIndex.tcl.in  pkgInstall.tcl  tclInk.c  tclUpworks.c  upworks  upworks.in
Tools/Upworks/win/: pkgIndex.tcl
Uplib/: Makefile  up_segment_io.c  up_segment_io.h  uplib.c  upsiglib.c  upsiglib.h
data/: test.chr  test.chr2  test.data  test.wrd  unipen.def
data/smp/: att.doc  hp.doc  hp1.datb  ncr.doc
