dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run to configure the
dnl	Makefile in this directory.
AC_INIT(../generic/ink_master.c)
# SCCS: @(#) configure.in 1.9 96/04/15 09:50:20

if test "$#" != "1"
then
	echo use: configure VERSION
	exit 1
else
	VERSION=$1
	sleep 1
fi

UNIPEN_VERSION=$VERSION

if test "${prefix}" = "NONE"; then
    prefix=/usr/local
fi
if test "${exec_prefix}" = "NONE"; then
    exec_prefix=$prefix
fi

#--------------------------------------------------------------------
#	See if there was a command-line option for where Tcl is;  if
#	not, assume that its top-level directory is a sibling of ours.
#--------------------------------------------------------------------

BUILD_DIR=`pwd`

if test -d "${BUILD_DIR}/../tcl7.6/unix" ; then
    TCL_LIB_DIR=`cd ${BUILD_DIR}/../tcl7.6/unix; pwd`
elif test -d "${BUILD_DIR}/../tcl7.6b2/unix" ; then
    TCL_LIB_DIR=`cd ${BUILD_DIR}/../tcl7.6b2/unix; pwd`
elif test -d "${BUILD_DIR}/../tcl7.6b1/unix" ; then
    TCL_LIB_DIR=`cd ${BUILD_DIR}/../tcl7.6b1/unix; pwd`
else
    TCL_LIB_DIR=$prefix/lib
fi
AC_ARG_WITH(tcl, [  --with-tcl=DIR          use Tcl binaries from DIR],
	TCL_LIB_DIR=$withval,)

if test ! -d "${TCL_LIB_DIR}" -o ! -f "${TCL_LIB_DIR}/tclConfig.sh"; then
    TCL_LIB_DIR=$prefix/lib
fi
if test ! -d "${TCL_LIB_DIR}" -o ! -f "${TCL_LIB_DIR}/tclConfig.sh"; then
    AC_MSG_ERROR(can't find Tcl library in $TCL_LIB_DIR)
fi

if test -d ${TCL_LIB_DIR}/../bin ; then
    TCL_BIN_DIR=`cd ${TCL_LIB_DIR}/../bin; pwd`
elif test -d ${TCL_LIB_DIR}/../../bin ; then
    TCL_BIN_DIR=`cd ${TCL_LIB_DIR}/../../bin; pwd`
else
    TCL_BIN_DIR=${TCL_LIB_DIR}
fi


if test -d ${TCL_LIB_DIR}/../generic ; then
    TCL_INC_DIR=`cd ${TCL_LIB_DIR}/../generic; pwd`
elif test -d ${TCL_LIB_DIR}/../include ; then
    TCL_INC_DIR=`cd ${TCL_LIB_DIR}/../include; pwd`
else
    TCL_INC_DIR=`echo ${TCL_LIB_DIR} |sed -e 's|/lib|/include|'`
fi

#--------------------------------------------------------------------
#	See if there was a command-line option for where Tk is;  if
#	not, assume that its top-level directory is a sibling of ours.
#--------------------------------------------------------------------

if test -f "${TCL_LIB_DIR}/tkConfig.sh"; then
    TK_LIB_DIR=$TCL_LIB_DIR
elif test -d "${BUILD_DIR}/../tk4.2/unix"; then
    TK_LIB_DIR=`cd ${BUILD_DIR}/../tk4.2/unix; pwd`
elif test -d "${BUILD_DIR}/../tk4.2b2/unix"; then
    TK_LIB_DIR=`cd ${BUILD_DIR}/../tk4.2b2/unix; pwd`
elif test -d "${BUILD_DIR}/../tk4.2b1/unix"; then
    TK_LIB_DIR=`cd ${BUILD_DIR}/../tk4.2b1/unix; pwd`
else
    TK_LIB_DIR=$prefix/lib
fi
AC_ARG_WITH(tcl, [  --with-tk=DIR           use Tk 4.2 binaries from DIR],
	TK_LIB_DIR=$withval, TK_LIB_DIR=$TK_LIB_DIR)

if test ! -d "${TK_LIB_DIR}" -o ! -f "${TK_LIB_DIR}/tkConfig.sh"; then
    TK_LIB_DIR=$prefix/lib
fi
if test ! -d "${TK_LIB_DIR}" -o ! -f "${TK_LIB_DIR}/tkConfig.sh"; then
    AC_MSG_ERROR(can't find Tcl library in $TK_LIB_DIR)
fi

if test -d ${TK_LIB_DIR}/../bin ; then
    TK_BIN_DIR=`cd ${TK_LIB_DIR}/../bin; pwd`
elif test -d ${TK_LIB_DIR}/../../bin ; then
    TK_BIN_DIR=`cd ${TK_LIB_DIR}/../../bin; pwd`
else
    TK_BIN_DIR=${TK_LIB_DIR}
fi

if test -d ${TK_LIB_DIR}/../generic ; then
    TK_INC_DIR=`cd ${TK_LIB_DIR}/../generic; pwd`
elif test -d ${TK_LIB_DIR}/../include ; then
    TK_INC_DIR=`cd ${TK_LIB_DIR}/../include; pwd`
else
    TK_INC_DIR=`echo ${TK_LIB_DIR} |sed -e 's|/lib|/include|'`
fi

#--------------------------------------------------------------------
#	Read in configuration information generated by Tcl for shared
#	libraries, and arrange for it to be substituted into our
#	Makefile.
#--------------------------------------------------------------------

file=$TCL_LIB_DIR/tclConfig.sh
. $file

CC=$TCL_CC
CFLAGS=$TCL_CFLAGS
SHLIB_CFLAGS=$TCL_SHLIB_CFLAGS
SHLIB_LD=$TCL_SHLIB_LD
SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
SHLIB_VERSION=$TCL_SHLIB_VERSION

file=$TK_LIB_DIR/tkConfig.sh
. $file

#--------------------------------------------------------------------
#	Locate the X11 header files and the X11 library archive.  Try
#	the ac_path_x macro first, but if it doesn't find the X stuff
#	(e.g. because there's no xmkmf program) then check through
#	a list of possible directories.  Under some conditions the
#	autoconf macro will return an include directory that contains
#	no include files, so double-check its result just to be safe.
#--------------------------------------------------------------------

AC_PATH_X
not_really_there=""
if test "$no_x" = ""; then
    if test "$x_includes" = ""; then
	AC_TRY_CPP([#include <X11/XIntrinsic.h>], , not_really_there="yes")
    else
	if test ! -r $x_includes/X11/Intrinsic.h; then
	    not_really_there="yes"
	fi
    fi
fi
if test "$no_x" = "yes" -o "$not_really_there" = "yes"; then
    AC_MSG_CHECKING(for X11 header files)
    XINCLUDES="# no special path needed"
    AC_TRY_CPP([#include <X11/Intrinsic.h>], , XINCLUDES="nope")
    if test "$XINCLUDES" = nope; then
        dirs="/usr/unsupported/include\
		  	/usr/local/X11R6/include\
		  	/usr/X11R6/include\
		  	/usr/local/include\
		  	/usr/X386/include\
		  	/usr/include/X11R4\
		  	/usr/X11R5/include\
		  	/usr/include/X11R5\
		  	/usr/openwin/include\
		  	/usr/X11/include\
		  	/usr/sww/include"
        for i in $dirs ; do
		  echo testing for "$i"
	    if test -r $i/X11/Intrinsic.h; then
		AC_MSG_RESULT($i)
	        XINCLUDES=" -I$i"
		break
	    fi
        done
    fi
else
    if test "$x_includes" != ""; then
	XINCLUDES=-I$x_includes
    else
	XINCLUDES="# no special path needed"
    fi
fi
if test "$XINCLUDES" = nope; then
    AC_MSG_RESULT(couldn't find any!)
    XINCLUDES="# no include files found"
fi

X11_LIB_DIR=`echo ${TK_XLIBSW} |sed -e "s|-L||" -e "s/ .*$//g" -e "s/-l.*$//g"`
if test ! -d "${X11_LIB_DIR}" -o ! -f "${X11_LIB_DIR}/libX11.a" ; then
    X11_LIB_DIR="/usr/lib"
fi

#
# Test if there are shared versions of the tk, tcl,X11, math and c libraries.
# No need for that for a.out type systems, because there
# static libraries can and should be linked in always.
#
VERSION=""
TCL_BASE=`echo ${TCL_LIB_SPEC} |sed -e "s|^.*-l||"`
TK_BASE=`echo ${TK_LIB_SPEC} |sed -e "s|^.*-l||"`
eval "TCL_SHARED_LIB_FILE=lib${TCL_BASE}${TCL_SHARED_LIB_SUFFIX}"
eval "TK_SHARED_LIB_FILE=lib${TK_BASE}${TCL_SHARED_LIB_SUFFIX}"

if test "x${SHLIB_SUFFIX}" = "x..o"; then
    if test "x${SHLIB_CFLAGS}" = "x-G 0"; then
	TEST_SUFFIX="_G0.a"
    else
	TEST_SUFFIX=".a"
    fi
else
    if test "x${TCL_SHARED_LIB_SUFFIX}" = 'x${VERSION}.a' -a "x${SHLIB_SUFFIX}" = "x.so"; then
	TEST_SUFFIX=".a"
    else
	TEST_SUFFIX="${SHLIB_SUFFIX}"
    fi
fi

TK_LIBS="${TK_XLIBSW}"

if test "$TK_LIB_FILE" = "$TK_SHARED_LIB_FILE"; then
    TK_LIBS="${TK_LIB_SPEC} ${TK_LIBS}"
fi
if test "$TCL_LIB_FILE" = "$TCL_SHARED_LIB_FILE"; then
    LIBS="${LIBS} ${TCL_LIB_SPEC}"
else
    LIBS=""
fi
dirs="/lib/libm${TEST_SUFFIX}* /usr/lib/libm${TEST_SUFFIX}*"
for i in $dirs ; do
    if test -f $i; then
	LIBS="${LIBS} -lm"
	break;
    fi
done
dirs="/lib/libc${TEST_SUFFIX}* /usr/lib/libc${TEST_SUFFIX}*"
for i in $dirs ; do
    if test -f $i; then
	LIBS="${LIBS} -lc"
	break;
    fi
done

case $TCL_BASE in
    *i)
	WISH=iwish
	SHLIB_SUFFIX="${UNIPEN_VERSION}i${SHLIB_SUFFIX}"
	LIB_RUNTIME_DIR='$(exec_prefix)/lib/itcl'
	;;
    *)
	WISH=wish
	SHLIB_SUFFIX="${UNIPEN_VERSION}${SHLIB_SUFFIX}"
	LIB_RUNTIME_DIR='$(exec_prefix)/lib'
	;;
esac

if test -f "${TK_BIN_DIR}/${WISH}${TK_VERSION}"; then
    WISH="${WISH}${TK_VERSION}"
elif test -f "${exec_prefix}/bin/${WISH}${TK_VERSION}"; then
    WISH="${exec_prefix}/bin/${WISH}${TK_VERSION}"
fi
AC_SUBST(WISH)
AC_SUBST(LIB_RUNTIME_DIR)

#LIBS="$LIBS -L${TK_LIB_DIR}"
#echo "LIBS $LIBS"
AC_SUBST(LIBS)
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_LD)
AC_SUBST(SHLIB_LD_LIBS)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(SHLIB_VERSION)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_VERSION)
AC_SUBST(TCL_LIB_DIR)
AC_SUBST(TCL_BIN_DIR)
AC_SUBST(TCL_INC_DIR)
AC_SUBST(TK_LIBS)
AC_SUBST(TK_VERSION)
AC_SUBST(TK_LIB_DIR)
AC_SUBST(TK_BIN_DIR)
AC_SUBST(TK_INC_DIR)
AC_SUBST(X11_LIB_DIR)
AC_SUBST(XINCLUDES)
AC_SUBST(UNIPEN_VERSION)

AC_OUTPUT(Makefile pkgIndex.tcl upworks)

chmod a+rx upworks
